GPL/P6/tests/t021.err
Semantic error on line 3: Variable 'move' previously declared.
