GPL/P6/tests/t021.gpl
forward animation move(circle c);

string move;
